Fixed spacing on modal to look more balanced and centered

--- a/css/style.css
+++ b/css/style.css
@@ -1,208 +1,188 @@
-html,body,address,blockquote,div,
-form,fieldset,caption,
-h1,h2,h3,h4,h5,h6,
-hr,ul,li,ol,ul,
-table,tr,td,th,p,img {
-margin:0;
-line-height: 1.5;
+html,
+body,
+address,
+blockquote,
+div,
+form,
+fieldset,
+caption,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+ul,
+li,
+ol,
+ul,
+table,
+tr,
+td,
+th,
+p,
+img {
+    margin: 0;
+    line-height: 1.5;
 }
-
-img,fieldset {
-	border:none;
-	padding: 1em;
+img,
+fieldset {
+    border: none;
+    padding: 1em;
 }
-
-@-webkit-keyframes typing { from { width: 0 }
-    to { width:7.75em; }
+@-webkit-keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 7.75em;
+    }
 }
-
 @-moz-keyframes typing {
-    from { width: 0 }
-    to { width:7.75em; }
+    from {
+        width: 0
+    }
+    to {
+        width: 7.75em;
+    }
 }
-
 a {
-	color:#ECECEC;
-	text-decoration:none;
-	vertical-align:middle;
-	-webkit-transition: color .3s;
-	-moz-transition:    color .3s;
-	-ms-transition:     color .3s;
-	-o-transition:      color .3s;
-	transition:         color .3s;
+    color: #ECECEC;
+    text-decoration: none;
+    vertical-align: middle;
+    -webkit-transition: color .3s;
+    -moz-transition: color .3s;
+    -ms-transition: color .3s;
+    -o-transition: color .3s;
+    transition: color .3s;
 }
-
 ul.nav {
-	padding: 0; margin: 0;
+    padding: 0;
+    margin: 0;
 }
-
 ul.nav li {
-	list-style-type: none;
+    list-style-type: none;
 }
-
 a:hover {
-	color:#98BC99;
+    color: #98BC99;
 }
-
 p {
-	color: #fafafa;
+    color: #fafafa;
 }
-
 body {
-	font-size:1em;
-	background:#E0BEBD;
-	height:auto;
-	text-align:center;
-	font-family: monospace;
-
+    font-size: 1em;
+    background: #E0BEBD;
+    height: auto;
+    text-align: center;
+    font-family: monospace;
 }
-
-section
-{
-	display:block;
-	max-width:500px;
-	background:#424242;
-	border-radius:.2em;
-	margin:0 auto 1em;
-	padding: 0 .2em 0.2em .2em;
+section {
+    display: block;
+    max-width: 500px;
+    background: #424242;
+    border-radius: .2em;
+    margin: 0 auto 1em;
+    padding: 0 .2em 0.2em .2em;
 }
-
-.nav {
+.nav {} .button {} .button.hover {} #project {
+    padding-bottom: 1em;
 }
-
-.button {
-}
-
-.button.hover {
-}
-
-#project {
-	padding-bottom:1em;
-}
-
 h1 {
-	color: #fafafa;
-	text-align:center;
-	font-size:4.5em;
-	margin:.2em 0 .1em;
+    color: #fafafa;
+    text-align: center;
+    font-size: 4.5em;
+    margin: .2em 0 .1em;
 }
-
 h2 {
-	color: #fafafa;
-	text-align:center;
-	font-size:3.5em;
-	margin:.2em 0 .1em;
+    color: #fafafa;
+    text-align: center;
+    font-size: 3.5em;
+    margin: .2em 0 .1em;
 }
-
 h3 {
-	color: #fafafa;
-	text-align:center;
-	font-size:2.5em;
-	margin:.2em 0 .1em;
-
+    color: #fafafa;
+    text-align: center;
+    font-size: 2.5em;
+    margin: .2em 0 .1em;
 }
-
 #headerIndex {
-	width:7.75em;
-	white-space:nowrap;
-	overflow:hidden;
-	border-right: .4em solid #E0BC72;
-	-webkit-animation: typing 2s steps(13, end);
-	-moz-animation: typing 2s steps(13, end);
-	padding-bottom: 0.1em;
+    width: 7.75em;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: .4em solid #E0BC72;
+    -webkit-animation: typing 2s steps(13, end);
+    -moz-animation: typing 2s steps(13, end);
+    padding-bottom: 0.1em;
 }
-
 #headerProjects {
-	width:7.75em;
-	white-space:nowrap;
-	overflow:hidden;
-	border-right: .4em solid #E0BC72;
+    width: 7.75em;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: .4em solid #E0BC72;
 }
-
-#projectHeader
-{
-	text-align:center;
-
+#projectHeader {
+    text-align: center;
 }
-
-#contactHeader
-{
-	text-align:center;
+.projectInfo {
+    padding-left: 2%;
+    padding-right: 2%;
 }
-
-#staticHeader
-{
+#contactHeader {
+    text-align: center;
 }
-
-.selfPhoto {
-
+#staticHeader {} .selfPhoto {} .text {
+    color: #3F3F3F;
+    height: auto;
+    text-align: center;
+    vertical-align: middle;
 }
-
-.text
-{
-	color:#3F3F3F;
-	height:auto;
-	text-align:center;
-	vertical-align:middle;
-}
-
 #msg {
-
-	margin-left: 2%;
-	margin-right: 2%;
+    margin-left: 2%;
+    margin-right: 2%;
 }
-
 @media only screen and (max-width: 500px) {
-	body {
-		-webkit-device-pixel-ratio: 1
-	}
+    body {
+        -webkit-device-pixel-ratio: 1
+    }
 }
-
 .modalDialog {
-	position: absolute !important;
-	overflow: auto;
-	top: 4px;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	margin:0 auto 1em;
-	z-index: 99999;
-	opacity:0;
-	-webkit-transition: opacity 900ms ease-in;
-	-moz-transition: opacity 900ms ease-in;
-	transition: opacity 900ms ease-in;
-	pointer-events: none;
+    position: absolute !important;
+    overflow: auto;
+    top: 3px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 0 auto 1em;
+    z-index: 99999;
+    opacity: 0;
+    -webkit-transition: opacity 900ms ease-in;
+    -moz-transition: opacity 900ms ease-in;
+    transition: opacity 900ms ease-in;
+    pointer-events: none;
 }
-
-
 .modalDialog:target {
-	opacity:1;
-	pointer-events: auto;
+    opacity: 1;
+    pointer-events: auto;
 }
-
 .modalDialog > div {
-	width: 500px;
-	position: relative;
-	border-radius: .2em;
-	margin:0 auto 1em;
-	background:#5C5C5C;
+    width: 500px;
+    position: relative;
+    border-radius: .2em;
+    margin: 0 auto 1em;
+    background: #5C5C5C;
 }
-
-.modalDialog p {
+.modalDialog p {} .close {
+    color: #424242;
+    font-size: 2.4em;
+    position: absolute;
+    right: .30em;
+    top: 0.6em;
+    text-align: center;
+    width: 1em;
+    height: 2.6em;
+    text-decoration: none;
 }
-
-.close {
-	color: #424242;
-	font-size: 2.4em;
-	position: absolute;
-	right: .30em;
-	top: 0.6em;
-  text-align: center;
-	width: 1em;
-	height: 2.6em;
-	text-decoration: none;
-}
-
 .close:hover {
-	text-color: #424242;
+    text-color: #424242;
 }
